--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,11 +2,11 @@ name: Meson Build
 run-name: ${{ github.actor }} is building and testing
 on: [push]
 jobs:
-  Build and test
-  runs-on: ubuntu-latest
-  steps:
-    - name: Checkout
-      uses: actions/checkout@v2
+  Build-and-test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
       
 # uses: BSFishy/meson-build@v1.0.3
 # with:
