--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,21 +7,26 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: list
+        run: ls -l
       - name: Build
         uses: BSFishy/meson-build@v1.0.3
         with:
           action: build
           directory: build
-      - name: Test
-        uses: BSFishy/meson-build@v1.0.3
-        with:
-          action: test
-          directory: build
-      - name: Coverage
-        uses: BSFishy/meson-build@v1.0.3
-        with:
-          action: coverage
-          directory: build
+          options: --verbose
+          meson-version: 1.3.1
+          ninja-version: 1.11.1
+#      - name: Test
+#        uses: BSFishy/meson-build@v1.0.3
+#        with:
+#          action: test
+#          directory: build
+#      - name: Coverage
+#        uses: BSFishy/meson-build@v1.0.3
+#        with:
+#          action: coverage
+#          directory: build
           
       
 # uses: BSFishy/meson-build@v1.0.3
