--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,19 +14,25 @@ jobs:
         with:
           action: build
           directory: build
+          setup-options: -Db_coverage=true
           options: --verbose
           meson-version: 1.3.1
           ninja-version: 1.11.1
-#      - name: Test
-#        uses: BSFishy/meson-build@v1.0.3
-#        with:
-#          action: test
-#          directory: build
-#      - name: Coverage
-#        uses: BSFishy/meson-build@v1.0.3
-#        with:
-#          action: coverage
-#          directory: build
+      - name: Test
+        uses: BSFishy/meson-build@v1.0.3
+        with:
+          action: test
+          directory: build
+      - name: Coverage
+        uses: BSFishy/meson-build@v1.0.3
+        with:
+          action: coverage
+          directory: build
+      - name: Tidy
+        uses: BSFishy/meson-build@v1.0.3
+        with:
+          action: tidy
+          directory: build
           
       
 # uses: BSFishy/meson-build@v1.0.3
