--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
         run: sudo apt-get install -y lcov gcovr
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Build
+      - name: Test
         uses: BSFishy/meson-build@v1.0.3
         with:
           action: test
@@ -18,18 +18,7 @@ jobs:
           options: --verbose
           meson-version: 1.3.1
           ninja-version: 1.11.1
-#      - name: Test
-#        uses: BSFishy/meson-build@v1.0.3
-#        with:
-#          action: test
-#          directory: build
-#      - name: Coverage
-#        uses: BSFishy/meson-build@v1.0.3
-#        with:
-#          action: coverage
-#          directory: build
-      - name: Tidy
-        uses: BSFishy/meson-build@v1.0.3
-        with:
-          action: tidy
-          directory: build
+      - name: Coverage
+        run: ninja -C build coverage
+      - name: List
+        run: cd build; ls -R
