Add base58 encoding

--- a/src/meson.build
+++ b/src/meson.build
@@ -2,5 +2,6 @@ main_sources += files('brutucs.cpp')
 
 sources += files(
   'random/linux-random.cpp',
-  'random/pseudo-random.cpp'
+  'random/pseudo-random.cpp',
+  'base58/base58.cpp'
 )
