--- a/test/meson.build
+++ b/test/meson.build
@@ -2,14 +2,19 @@ catch_lib = subproject('catch2').get_variable('catch2_with_main_dep')
 
 test_sources = files(
   'linux-random-test.cpp',
-  'pseudo-random-test.cpp'
+  'pseudo-random-test.cpp',
+  'base58-test.cpp'
 )
 
+incdir = include_directories(
+  '../src/random',
+  '../src/base58'
+)
 test_suite = executable(
   'brutucs-test',
   test_sources + sources,
   dependencies : catch_lib,
-  include_directories : '../src/random'
+  include_directories : incdir
 )
 
 test('Brutucs tests', test_suite)
