--- a/src/meson.build
+++ b/src/meson.build
@@ -3,5 +3,6 @@ main_sources += files('brutucs.cpp')
 sources += files(
   'random/linux-random.cpp',
   'random/pseudo-random.cpp',
-  'base58/base58.cpp'
+  'base58/base58.cpp',
+  'address/p2pkh-address-generator.cpp'
 )
