Add address store interface and memory
Adds the address store interface and the memory address store
implementation.

--- a/src/meson.build
+++ b/src/meson.build
@@ -4,5 +4,6 @@ sources += files(
   'random/linux-random.cpp',
   'random/pseudo-random.cpp',
   'base58/base58.cpp',
-  'address/p2pkh-address-generator.cpp'
+  'address/p2pkh-address-generator.cpp',
+  'address/memory-address-store.cpp'
 )
